Frontend: Comparer view - Implement Fit/Fill Data Actions

--- a/frontend/src/app/ui-kit/data-action-button/data-action-button.component.html
+++ b/frontend/src/app/ui-kit/data-action-button/data-action-button.component.html
@@ -1,5 +1,8 @@
 <button
   class="data-action"
+  [ngClass]="{
+    'data-action--active': selected
+  }"
   (click)="clicked.emit(label)">
   <app-icon [icon]="icon"></app-icon>
   <span [ngClass]="{ 'except-xs': hideLabelOnXS }">{{ label }}</span>
