Frontend: Comparer view - Implement Difference/Test Result/Reference/Comparer switch Data Actions

--- a/frontend/src/app/view/comparer/comparer.component.css
+++ b/frontend/src/app/view/comparer/comparer.component.css
@@ -1,4 +1,14 @@
 :host {
     height: 100%;
 }
-    
+
+.compare-images-container {}
+
+.compare-image {
+  opacity: 0;
+  position: absolute;
+}
+
+.compare-image--active {
+  opacity: 1;
+}
