--- a/frontend/src/app/view/comparer/comparer.component.css
+++ b/frontend/src/app/view/comparer/comparer.component.css
@@ -2,13 +2,21 @@
     height: 100%;
 }
 
+.data-placeholder {
+  height: 100%;
+  width: 100%;
+  box-shadow: inset 0 0 11px 0 #00000021;
+  padding: 1em;
+  margin-top: 1em;
+  border-radius: 6px;
+  border: 3px solid #e5e5e5;
+  border-top: 36px solid #e5e5e5;
+}
 .compare-images-container {}
-
 .compare-image {
   opacity: 0;
   position: absolute;
 }
-
 .compare-image--active {
   opacity: 1;
 }
