Frontend: Recent Runs table at Overview page - skip 'Approve' results and add AutoRefresh

--- a/frontend/src/app/layouts/overview-layout/overview-layout.component.html
+++ b/frontend/src/app/layouts/overview-layout/overview-layout.component.html
@@ -44,10 +44,7 @@
             <div class="column-header">
               <h2>Recent Runs</h2>
               <span>
-                <span class="action" [routerLink]="['/jobs']">View All (112)</span>
-                <span class="action action--active">Latest</span>
-                <span class="action">Passed</span>
-                <span class="action">Failed</span>
+                <span class="action" [routerLink]="['/jobs']">View All</span>
               </span>
             </div>
 
