--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -32,6 +32,7 @@
         (clicked)="refresh()">
       </app-data-action-button>
 
+      <!-- TODO: Enable later
       <app-data-action-button
         class="except-xs"
         [label]="'List View'"
@@ -39,13 +40,16 @@
         [hideLabelOnXS]="true"
         (clicked)="listView()">
       </app-data-action-button>
+      -->
 
+      <!--
       <app-data-action-button
         [label]="'Show Differences'"
         [icon]="'Show Differences'"
         [hideLabelOnXS]="true"
         (clicked)="showDifference()">
       </app-data-action-button>
+      -->
 
     </div>
   </div>
