--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -694,6 +694,7 @@ app-data-action-button:first-child {
 }
 .card-sm .image img {
   object-fit: cover;
+  object-position: top;
   width: 100%;
   height: 100%;
   min-height: 100%;
@@ -846,6 +847,7 @@ app-data-action-button:first-child {
 }
 .card-md .image img {
   object-fit: cover;
+  object-position: top;
   width: 100%;
   height: 100%;
   min-height: 100%;
