--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -74,11 +74,11 @@
       <h3 class="filter-header">Filter by Starter</h3>
       <app-checkbox-field
         [label]="'Only Started by Me'"
-        (changed)="starterFilterHandler('me', $event)">
+        (changed)="starterFilterHandler('Run by me', $event)">
       </app-checkbox-field>
       <app-checkbox-field
         [label]="'Only Started by Schedule'"
-        (changed)="starterFilterHandler('schedule', $event)">
+        (changed)="starterFilterHandler('Run by schedule', $event)">
       </app-checkbox-field>
 
       <h3 class="filter-header">Filter by Date</h3>
