Reuse HistoryTable as dumb component

--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -43,7 +43,10 @@
 
   <div class="data-placeholder">
 
-    <app-history-table></app-history-table>
+    <app-history-table
+    [jobs$]="jobs$"
+    >
+    </app-history-table>
 
   </div>
 
