--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="app-menu">
     <a [routerLink]="['/overview']" class="logo">
-      <img src="/assets/images/logo.svg" alt="">
+      <img src="/assets/images/logo.svg" alt="Home">
     </a>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
